Parse Java source file using JavaParser

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,9 @@
 [versions]
 guava = "33.4.5-jre"
 junit-jupiter = "5.12.1"
+javaparser = "3.27.0"
 
 [libraries]
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
+javaparser = { module = "com.github.javaparser:javaparser-core", version.ref = "javaparser" }
